src/parser/snapshots/simp__parser__tests__inputs__valid__expr_after_stmt_fn.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
StmtFn {
    name: "f",
    params: [],
    body: Block {
        body: [],
        tail: None,
    },
}
ExprInt {
    value: 0,
}
