src/parser/snapshots/simp__parser__tests__inputs__valid__expr_after_stmt_let.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
StmtLet {
    name: "v",
    value: ExprInt {
        value: 0,
    },
}
ExprInt {
    value: 0,
}
