src/parser/snapshots/simp__parser__tests__inputs__valid__expr_fn_call.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
ExprCall {
    callee: ExprIdent {
        name: "f",
    },
    args: [],
}
ExprCall {
    callee: ExprIdent {
        name: "f",
    },
    args: [
        ExprInt {
            value: 1,
        },
    ],
}
ExprCall {
    callee: ExprIdent {
        name: "f",
    },
    args: [
        ExprInt {
            value: 1,
        },
    ],
}
ExprCall {
    callee: ExprIdent {
        name: "f",
    },
    args: [
        ExprInt {
            value: 1,
        },
        ExprInt {
            value: 2,
        },
        ExprInt {
            value: 3,
        },
    ],
}
ExprCall {
    callee: ExprIdent {
        name: "f",
    },
    args: [
        ExprInt {
            value: 1,
        },
        ExprInt {
            value: 2,
        },
        ExprInt {
            value: 3,
        },
    ],
}
