src/parser/snapshots/simp__parser__tests__inputs__valid__expr_group.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
ExprInt {
    value: 0,
}
ExprCall {
    callee: ExprIdent {
        name: "f",
    },
    args: [],
}
