src/parser/snapshots/simp__parser__tests__inputs__valid__expr_str.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
ExprStr {
    value: "",
}
ExprStr {
    value: "asdf",
}
ExprStr {
    value: "👽",
}
