src/parser/snapshots/simp__parser__tests__inputs__valid__stmt_fn_multi_param.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
StmtFn {
    name: "f",
    params: [
        "a",
        "b",
        "c",
    ],
    body: Block {
        body: [],
        tail: None,
    },
}
StmtFn {
    name: "f",
    params: [
        "a",
        "b",
        "c",
    ],
    body: Block {
        body: [],
        tail: None,
    },
}
