src/parser/snapshots/simp__parser__tests__inputs__valid__stmt_fn_nested_fn.snap
---
source: src/parser/tests.rs
expression: parse(&input)
---
Fn
  name: "outer"
  params: []
  body: Block [
    Fn
      name: "inner"
      params: []
      body: Block []

  ]
